avance con apartado -proyectos realizados-

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -85,59 +85,110 @@
                 </div>
 
             </div>
+            <div id="conocimientos">
+                <p class="titulo">Conocimientos</p>
+                <div class="slider">
+                    <div class="slide-track">
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/angular-icon-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/css-3-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/git-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/github-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/html-5-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/java-4-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/javascript-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/msql-server-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/mysql-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/nodejs-1-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/python-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="../../../assets/images/logos/typescript-icon-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!--SECCION DE MYSERVICES-->
 
     <!--SECCION DE CONOCIMIENTOS-->
     <div id="proyectos">
-        <div class="titulo">
-            <h3><b>Destacados</b></h3>
-            <h1>Proyectos Realizados</h1>
-        </div>
-        <div id="creaciones">
-            <div class="card_project"><!--esto tiene que sobresaltar cuando el mouse este encima-->
-                <a href="https://github.com/jairoDGM/Proyecto_Tienda.git" target="_blank">
-                    <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                    <div class="container">
-                        <h4><b>Tienda Virtual</b></h4>
-                        <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                        y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                    </div>
-                </a>
+        <div id="contenido4">
+            <div id="header">
+                <p class="subtitulo"><b>Destacados</b></p>
+                <p class="titulo">Proyectos Realizados</p>
             </div>
-
-            <div class="card_project">
-                <a href="https://github.com/jairoDGM/Solucionador-Edos.git" target="_blank">
-                    <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                    <div class="container">
-                        <h4><b>Graficadora EDO</b></h4>
-                        <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                        y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card_project">
-                <a href="" target="_blank"><!--falta link en github-->
-                    <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                    <div class="container">
-                        <h4><b>Refriteca Website</b></h4>
-                        <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                        y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="card_project">
-                <a href="" target="_blank"> <!--falta link en github-->
-                    <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                    <div class="container">
-                        <h4><b>Quiniela Web</b></h4>
-                        <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                        y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                    </div>
-                </a>
+            <div id="creaciones">
+                <div class="card_project"><!--esto tiene que sobresaltar cuando el mouse este encima-->
+                    <a href="https://github.com/jairoDGM/Proyecto_Tienda.git" target="_blank">
+                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
+                        <div class="container">
+                            <h4><b>Tienda Virtual</b></h4>
+                            <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
+                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
+                        </div>
+                    </a>
+                </div>
+    
+                <div class="card_project">
+                    <a href="https://github.com/jairoDGM/Solucionador-Edos.git" target="_blank">
+                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
+                        <div class="container">
+                            <h4><b>Graficadora EDO</b></h4>
+                            <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
+                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
+                        </div>
+                    </a>
+                </div>
+    
+                <div class="card_project">
+                    <a href="" target="_blank"><!--falta link en github-->
+                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
+                        <div class="container">
+                            <h4><b>Refriteca Website</b></h4>
+                            <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
+                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
+                        </div>
+                    </a>
+                </div>
+    
+                <div class="card_project">
+                    <a href="" target="_blank"> <!--falta link en github-->
+                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
+                        <div class="container">
+                            <h4><b>Quiniela Web</b></h4>
+                            <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
+                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
