--- a/frontend/src/app/componentes/about-me/about-me.component.scss
+++ b/frontend/src/app/componentes/about-me/about-me.component.scss
@@ -500,13 +500,108 @@
                         height: 100%;
                       }
                 }
+                #conocimientos{
+                    
+                    margin-top: 4%;
+                    .titulo{
+                        color: white;
+                        font-size: 65px;
+                        text-decoration: underline;
+                        text-decoration-color: #49c5b6;
+                        margin-bottom: 7%;
+                    }
+                    body {
+                        align-items: center;
+                        background: #E3E3E3;
+                        display: flex;
+                        height: 100vh;
+                        justify-content: center;
+                    }
+                    
+                    @mixin white-gradient {
+                        background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+                    }
+                    
+                    $animationSpeed: 20s;
+                    
+                    // Animation
+                    @keyframes scroll {
+                        0% { transform: translateX(0); }
+                        100% { transform: translateX(calc(-250px * 7))}
+                    }
+                    
+                    
+                    // Styling
+                    .slider {
+                        background: white;
+                        box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
+                        height: 100px;
+                        margin: auto;
+                        overflow:hidden;
+                        position: relative;
+                        width: 960px;
+                        
+                        &::before,
+                        &::after {
+                            @include white-gradient;
+                            content: "";
+                            height: 100px;
+                            position: absolute;
+                            width: 200px;
+                            z-index: 2;
+                        }
+                        
+                        &::after {
+                            right: 0;
+                            top: 0;
+                            transform: rotateZ(180deg);
+                        }
+                    
+                        &::before {
+                            left: 0;
+                            top: 0;
+                        }
+                        
+                        .slide-track {
+                            animation: scroll $animationSpeed linear infinite;
+                            display: flex;
+                            width: calc(250px * 14);
+                        }
+                        
+                        .slide {
+                            height: 100px;
+                            width: 250px;
+                        }
+                    }
+                }
 
             }
             
         }
         #proyectos{
             width: 100%;
-            background-color: rgb(30, 29, 29);
+            background-color: black;
+            #contenido4{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin: 4%;
+                background-color: red;
+                #header{
+                    .subtitulo{
+                        color: #49c5b6;
+                        font-size: 45px;
+                        margin-bottom: 3%;
+                    }
+                    .titulo{
+                        color: white;
+                        font-size: 65px;
+                        text-decoration: underline;
+                        text-decoration-color: #49c5b6;
+                        margin-bottom: 7%;
+                    }
+                }
+            }
         }
     
     }
