--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -5,7 +5,7 @@
             <div class="opciones"><a href="#AboutMe">Acerca de Mi</a></div>
             <div class="opciones"><a href="#MyServices">Servicios</a></div>
             <div class="opciones"><a href="#proyectos">Mis Proyectos</a></div>
-            <div class="opciones"><a href="">Blog</a></div> <!--link a otra pagina-->
+            <div class="opciones"><a href="blog">Blog</a></div> <!--link a otra pagina-->
         </div>
     </div>
 
@@ -34,10 +34,10 @@
             <div id="info">
                 <p class="subtitulo"><b>Biografia</b></p>
                 <p class="titulo">Sobre mi</p>
-                <p class="texto_plano">Hola!, soy Jairo Garcia; un estudiante universitario y desarrollador Web Full-Stack viviendo 
+                <p class="texto_plano">Hola!, soy Jairo Garcia; un estudiante universitario y desarrollador Web Full-Stack viviendo
                 en Guatemala. En mis años de experiencia como desarrollador he trabajado en el front-end y
                 back-end de paginas web, lo cual ha generado que ambos lados sean mis favoritos en un proyecto :).
-                he adquirido las habilidades necesarias para construir proyectos web que 
+                he adquirido las habilidades necesarias para construir proyectos web que
                 satisfagan los requerimientos del cliente.
                 </p>
                 <p id="contacto">Contactame!</p>
@@ -48,7 +48,9 @@
                     <a href="https://www.facebook.com/jairo.garcia.JG" target="_blank"><img src="../../../assets/images/icons8-facebook.svg" alt="link facebook"></a>
                     <a href="" target="_blank"><img src="../../../assets/images/icons8-linkedin.svg" alt="link linkedin"></a>
                 </div>
-                <button class="button"> Descargar CV</button>
+                <a href="../../../assets/Documentos/IT Jairo García CV.pdf" download="CV_Jairo_Garcia">
+                  <button class="button"> Descargar CV</button>
+                </a>
             </div>
         </div>
     </div>
@@ -66,21 +68,21 @@
                 <div class="card">
                     <h1><b>Gestion DB</b></h1>
                     <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                    <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
+                    <p>Creacion de Base de datos relacionales; especificas para las caracteristicas
                     y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
                 </div>
 
                 <div class="card">
                     <h1><b>Landing Pages</b></h1>
                     <img src="../../../assets/images/web-page-browser-window-svgrepo-com.svg" alt="">
-                    <p>Diseño y Construccion de paginas web para presentacion, ideales para negocios o Empresas 
+                    <p>Diseño y Construccion de paginas web para presentacion, ideales para negocios o Empresas
                     que desean ampliar sus clientes potenciales.</p>
                 </div>
 
                 <div class="card">
                     <h1><b>Web Apps</b></h1>
                     <img src="../../../assets/images/browser-website-svgrepo-com.svg" alt="">
-                    <p>Creacion de un ecosistema completo para tu pagina web, desde el frontend hasta el backend, y por su puesto la Base 
+                    <p>Creacion de un ecosistema completo para tu pagina web, desde el frontend hasta el backend, y por su puesto la Base
                     de Datos. Ideal para negocios que desean operar e interactuar de distintas maneras con sus clientes/usuarios</p>
                 </div>
 
@@ -143,52 +145,53 @@
         <div id="contenido4">
             <div id="header">
                 <p class="subtitulo"><b>Destacados</b></p>
-                <p class="titulo">Proyectos Realizados</p>
+                <p class="titulo">Proyectos Principales</p>
             </div>
             <div id="creaciones">
-                <div class="card_project"><!--esto tiene que sobresaltar cuando el mouse este encima-->
-                    <a href="https://github.com/jairoDGM/Proyecto_Tienda.git" target="_blank">
-                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                        <div class="container">
-                            <h4><b>Tienda Virtual</b></h4>
-                            <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                        </div>
-                    </a>
-                </div>
-    
+
                 <div class="card_project">
-                    <a href="https://github.com/jairoDGM/Solucionador-Edos.git" target="_blank">
-                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                        <div class="container">
-                            <h4><b>Graficadora EDO</b></h4>
-                            <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                        </div>
+                    <h1><b>Tienda Virtual</b></h1>
+                    <img src="../../../assets/images/logos/Tienda.svg" alt="">
+                    <p>Pagina web de productos electronicos, en la cual se pueden gestionar compras y pedidos haciendo
+                      uso de una Base de Datos distribuida; la cual es consultada en la parte del backend.
+                    </p>
+                    <a href="https://github.com/jairoDGM/Proyecto_Tienda.git" class="btn41-43 btn-41" target="_blank">
+                      Ir a Github
                     </a>
                 </div>
-    
+
                 <div class="card_project">
-                    <a href="" target="_blank"><!--falta link en github-->
-                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                        <div class="container">
-                            <h4><b>Refriteca Website</b></h4>
-                            <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                        </div>
+                    <h1><b>Graficadora EDO</b></h1>
+                    <img src="../../../assets/images/logos/graficadora.svg" alt="">
+                    <p>Software matematico desarrollado completamente en Java, el cual es capaz de resolver
+                    ecuaciones diferenciales de primer orden; esto a travez de la implementacion del "Metodo de Euler".</p>
+                    <a href="https://github.com/jairoDGM/Solucionador-Edos.git" class="btn41-43 btn-41" target="_blank">
+                      Ir a Github
                     </a>
                 </div>
-    
+
                 <div class="card_project">
-                    <a href="" target="_blank"> <!--falta link en github-->
-                        <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
-                        <div class="container">
-                            <h4><b>Quiniela Web</b></h4>
-                            <p>Creacion de Base de datos relacionales; especificas para las caracteristicas 
-                            y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
-                        </div>
+                    <h1><b>Refriteca Website</b></h1>
+                    <img src="../../../assets/images/logos/Website.svg" alt="">
+                    <p>Pagina web diseñada para la empresa "Refriteca" para poder extender su alcance con respecto
+                      a sus clientes objetivos
+                    </p>
+                    <a href="" class="btn41-43 btn-41">
+                      Ir a Sitio Web
                     </a>
                 </div>
+
+                <div class="card_project">
+                    <h1><b>Quiniela Web</b></h1>
+                    <img src="../../../assets/images/logos/quiniela.svg" alt="">
+                    <p>Pagina web que implementa por completo un esquema "CRUD" para poder gestionar una quiniela
+                      con diferentes usuarios y apartados.
+                    </p>
+                    <a href="https://github.com/jairoDGM/Quiniela_Mundial.git" class="btn41-43 btn-41" target="_blank">
+                      Ir a Github
+                    </a>
+                </div>
+
             </div>
         </div>
     </div>
