--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -95,6 +95,9 @@
                             <img src="../../../assets/images/logos/angular-icon-logo-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
+                          <img src="../../../assets/images/logos/angular-icon-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                        </div>
+                        <div class="slide">
                             <img src="../../../assets/images/logos/css-3-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
@@ -126,12 +129,6 @@
                         </div>
                         <div class="slide">
                             <img src="../../../assets/images/logos/typescript-icon-svgrepo-com.svg" height="100" width="250" alt="" />
-                        </div>
-                        <div class="slide">
-                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
-                        </div>
-                        <div class="slide">
-                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
                         </div>
                     </div>
                 </div>
