--- a/frontend/src/app/componentes/about-me/about-me.component.scss
+++ b/frontend/src/app/componentes/about-me/about-me.component.scss
@@ -23,7 +23,7 @@
             cursor: pointer;
             transition: .5s;
             font-weight: 400;
-            font-size: 17px;
+            font-size: 24px;
             border: 1px solid;
             font-family: inherit;
             text-transform: uppercase;
@@ -193,20 +193,309 @@
                             height: 110px;
                             width: 110px;
                         }
-
-                        margin-bottom: 4%;
+                        img:hover{
+                          height: 117px;
+                          width: 117px;
+                        }
+                        margin-bottom: 3%;
                     }
                 }
 
             }
         }
         #MyServices{
-            width: 100%;
-            background-color: rgb(30, 29, 29);
+          width: 100%;
+          background-color: rgb(16, 16, 16);
+          #contenido3{
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              margin: 4%;
+
+              #header{
+                  .subtitulo{
+                      color: #49c5b6;
+                      font-size: 55px;
+                      margin-bottom: 2%;
+                  }
+                  .titulo{
+                      color: white;
+                      font-size: 75px;
+                      text-decoration: underline;
+                      text-decoration-color: #49c5b6;
+                      margin-bottom: 7%;
+                  }
+              }
+              #tarjetas{
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: center;
+                  justify-content: space-between;
+                  margin: 1%;
+                  .card {
+                      width: 25%;
+
+                      background: #f8f9fa;
+                      position: relative;
+                      box-shadow: 15px 15px 50px #adb5bd75;
+                      text-align: center;
+                      transition: all 0.3s ease-in;
+                      img{
+                          width: 50%;
+                      }
+                    }
+
+                    .card h1 {
+                      margin: 5%;
+                      text-decoration: underline;
+                      text-decoration-color: #49c5b6;
+                    }
+
+                    .card p {
+                      transition: all 0.3s ease-in;
+                      color: white;
+                      margin: 6%;
+                      font-size: 30px;
+                      line-height: 110%;
+                    }
+
+                    .card:hover {
+                      cursor: pointer;
+                      box-shadow: none;
+                    }
+
+                    .card:hover p {
+                      transform: scale(1);
+                      color: #f8f9fa;
+                    }
+
+                    .card::before {
+                      content: '';
+                      width: 100%;
+                      height: 0;
+                      background: #49c5b6;
+                      position: absolute;
+                      left: 0;
+                      bottom: 0;
+                          /* Or Top */
+                      transition: 0.3s ease-in-out;
+                      z-index: 0;
+                    }
+
+                    .card:hover::before {
+                      height: 100%;
+                    }
+              }
+              #conocimientos{
+
+                  margin-top: 4%;
+                  .titulo{
+                      color: white;
+                      font-size: 75px;
+                      text-decoration: underline;
+                      text-decoration-color: #49c5b6;
+                      margin-bottom: 7%;
+                  }
+                  body {
+                      align-items: center;
+                      background: #E3E3E3;
+                      display: flex;
+                      height: 100vh;
+                      justify-content: center;
+                  }
+
+                  @mixin white-gradient {
+                      background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+                  }
+
+                  $animationSpeed: 20s;
+
+                  // Animation
+                  @keyframes scroll {
+                      0% { transform: translateX(0); }
+                      100% { transform: translateX(calc(-250px * 7))}
+                  }
+
+
+                  // Styling
+                  .slider {
+                      background: white;
+                      box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
+                      height: 100px;
+                      margin: auto;
+                      overflow:hidden;
+                      position: relative;
+                      width: 1500px;
+
+                      &::before,
+                      &::after {
+                          @include white-gradient;
+                          content: "";
+                          height: 200px;
+                          position: absolute;
+                          width: 200px;
+                          z-index: 2;
+                      }
+
+                      &::after {
+                          right: 0;
+                          top: 0;
+                          transform: rotateZ(180deg);
+                      }
+
+                      &::before {
+                          left: 0;
+                          top: 0;
+                      }
+
+                      .slide-track {
+                          animation: scroll $animationSpeed linear infinite;
+                          display: flex;
+                          width: calc(250px * 14);
+                      }
+
+                      .slide {
+                          height: 100px;
+                          width: 1500px;
+                      }
+                  }
+              }
+
+          }
         }
         #proyectos{
-            width: 100%;
-            background-color: rgb(30, 29, 29);
+          width: 100%;
+          background-color: black;
+          #contenido4{
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              margin: 4%;
+
+              #header{
+                  .subtitulo{
+                      color: #49c5b6;
+                      font-size: 55px;
+                      margin-bottom: 2%;
+                  }
+                  .titulo{
+                      color: white;
+                      font-size: 75px;
+                      text-decoration: underline;
+                      text-decoration-color: #49c5b6;
+                      margin-bottom: 7%;
+                  }
+              }
+              #creaciones{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                justify-content: space-between;
+                margin: 1%;
+                /*ESTILO PARA LAS CARDS*/
+                .card_project {
+                    width: 25%;
+                    border: 6px solid gray;
+                    background: #f8f9fa;
+                    position: relative;
+                    box-shadow: 15px 15px 50px #adb5bd75;
+                    text-align: center;
+                    transition: all 0.3s ease-in;
+                    img{
+                        width: 50%;
+                    }
+                  }
+
+                  .card_project h1 {
+                    margin: 5%;
+                    text-decoration: underline;
+                    text-decoration-color: #49c5b6;
+                  }
+
+                  .card_project p {
+                    transition: all 0.3s ease-in;
+                    color: white;
+                    margin: 6%;
+                    font-size: 30px;
+                    line-height: 110%;
+                  }
+
+                  .card_project:hover {
+                    cursor: pointer;
+                    box-shadow: none;
+                  }
+
+                  .card_project:hover p {
+                    transform: scale(1);
+                    color: #f8f9fa;
+                  }
+
+                  .card_project::before {
+                    content: '';
+                    width: 100%;
+                    height: 0;
+                    background: #49c5b6;
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                        /* Or Top */
+                    transition: 0.3s ease-in-out;
+                    z-index: 0;
+                  }
+
+                  .card_project:hover::before {
+                    height: 100%;
+                  }
+
+                  /*ESTILOS PARA LOS BOTONES*/
+                  .btn41-43 {
+                    padding: 20px 55px;
+                    font-family: "Roboto", sans-serif;
+                    font-weight: 500;
+                    background: transparent;
+                    outline: none !important;
+                    cursor: pointer;
+                    transition: all 0.3s ease;
+                    position: relative;
+                    display: inline-block;
+                    margin-bottom: 5%;
+                    font-size: 20px;
+                  }
+
+                  .btn-41 {
+                    border: 2px solid rgb(255, 255, 255);
+                    z-index: 1;
+                    color: white;
+                  }
+
+                  .btn-41:after {
+                    position: absolute;
+                    content: "";
+                    width: 0;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    direction: rtl;
+                    z-index: -1;
+                    background: rgb(255, 255, 255);
+                    transition: all 0.3s ease;
+                  }
+
+                  .btn-41:hover {
+                    color: rgb(0, 0, 0);
+                  }
+
+                  .btn-41:hover:after {
+                    left: auto;
+                    right: 0;
+                    width: 100%;
+                  }
+
+                  .btn-41:active {
+                    top: 2px;
+                  }
+            }
+          }
         }
 
     }
