--- a/frontend/src/app/componentes/about-me/about-me.component.scss
+++ b/frontend/src/app/componentes/about-me/about-me.component.scss
@@ -1156,8 +1156,8 @@
                     align-items: center;
                     margin: 1%;
                     img{
-                        height: 100%;
-                        width: 100%;
+                        height: 90%;
+                        width: 90%;
                     }
                 }
                 #info{
@@ -1176,35 +1176,328 @@
                         text-decoration-color: #49c5b6;
                         margin-bottom: 5%;
                     }
-                    p{
-                        color: white;
-                        margin-right: 5%;
-                        margin-bottom: 5%;
-                    }
-                    #redes{
-                        border-style: solid;
-                        border-color: #49c5b6;
-                        display: flex;
-                        justify-content: center;
-                        justify-content: space-around;
-                        flex-wrap: wrap;
-                        img{
-                            height: 70px;
-                            width: 70px;
-                        }
-                        margin-bottom: 4%;
-                    }
+                    .texto_plano{
+                      color: white;
+                      margin-right: 5%;
+                      margin-bottom: 7%;
+                      line-height: 150%;
+                      font-size: 20px;
+                  }
+                  #contacto{
+                      color: white;
+                      font-size: 35px;
+                  }
+                  #redes{
+                      border-style: solid;
+                      border-color: #49c5b6;
+                      display: flex;
+                      justify-content: center;
+                      justify-content: space-around;
+                      flex-wrap: wrap;
+                      img{
+                          height: 60px;
+                          width: 60px;
+                      }
+                      img:hover{
+                          height: 67px;
+                          width: 67px;
+                      }
+                      margin-bottom: 6%;
+                  }
                 }
 
             }
         }
         #MyServices{
-            width: 100%;
-            background-color: rgb(30, 29, 29);
+          width: 100%;
+          background-color: rgb(16, 16, 16);
+          #contenido3{
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              margin: 4%;
+
+              #header{
+                  .subtitulo{
+                      color: #49c5b6;
+                      font-size: 25px;
+                      margin-bottom: 2%;
+                  }
+                  .titulo{
+                      color: white;
+                      font-size: 45px;
+                      text-decoration: underline;
+                      text-decoration-color: #49c5b6;
+                      margin-bottom: 7%;
+                  }
+              }
+              #tarjetas{
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: center;
+                  justify-content: space-between;
+                  margin: 1%;
+                  .card {
+                      width: 28%;
+
+                      background: #f8f9fa;
+                      position: relative;
+                      box-shadow: 15px 15px 50px #adb5bd75;
+                      text-align: center;
+                      transition: all 0.3s ease-in;
+                      img{
+                          width: 50%;
+                      }
+                    }
+
+                    .card h1 {
+                      margin: 5%;
+                      text-decoration: underline;
+                      text-decoration-color: #49c5b6;
+                    }
+
+                    .card p {
+                      transition: all 0.3s ease-in;
+                      color: white;
+                      margin: 6%;
+                      font-size: 20px;
+                    }
+
+                    .card:hover {
+                      cursor: pointer;
+                      box-shadow: none;
+                    }
+
+                    .card:hover p {
+                      transform: scale(1);
+                      color: #f8f9fa;
+                    }
+
+                    .card::before {
+                      content: '';
+                      width: 100%;
+                      height: 0;
+                      background: #49c5b6;
+                      position: absolute;
+                      left: 0;
+                      bottom: 0;
+                          /* Or Top */
+                      transition: 0.3s ease-in-out;
+                      z-index: 0;
+                    }
+
+                    .card:hover::before {
+                      height: 100%;
+                    }
+              }
+              #conocimientos{
+
+                  margin-top: 4%;
+                  .titulo{
+                      color: white;
+                      font-size: 45px;
+                      text-decoration: underline;
+                      text-decoration-color: #49c5b6;
+                      margin-bottom: 7%;
+                  }
+                  body {
+                      align-items: center;
+                      background: #E3E3E3;
+                      display: flex;
+                      height: 100vh;
+                      justify-content: center;
+                  }
+
+                  @mixin white-gradient {
+                      background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+                  }
+
+                  $animationSpeed: 20s;
+
+                  // Animation
+                  @keyframes scroll {
+                      0% { transform: translateX(0); }
+                      100% { transform: translateX(calc(-250px * 7))}
+                  }
+
+
+                  // Styling
+                  .slider {
+                      background: white;
+                      box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
+                      height: 100px;
+                      margin: auto;
+                      overflow:hidden;
+                      position: relative;
+                      width: 860px;
+
+                      &::before,
+                      &::after {
+                          @include white-gradient;
+                          content: "";
+                          height: 100px;
+                          position: absolute;
+                          width: 200px;
+                          z-index: 2;
+                      }
+
+                      &::after {
+                          right: 0;
+                          top: 0;
+                          transform: rotateZ(180deg);
+                      }
+
+                      &::before {
+                          left: 0;
+                          top: 0;
+                      }
+
+                      .slide-track {
+                          animation: scroll $animationSpeed linear infinite;
+                          display: flex;
+                          width: calc(250px * 14);
+                      }
+
+                      .slide {
+                          height: 100px;
+                          width: 250px;
+                      }
+                  }
+              }
+
+          }
         }
         #proyectos{
-            width: 100%;
-            background-color: rgb(30, 29, 29);
+          width: 100%;
+          background-color: black;
+          #contenido4{
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              margin: 4%;
+
+              #header{
+                  .subtitulo{
+                      color: #49c5b6;
+                      font-size: 25px;
+                      margin-bottom: 2%;
+                  }
+                  .titulo{
+                      color: white;
+                      font-size: 45px;
+                      text-decoration: underline;
+                      text-decoration-color: #49c5b6;
+                      margin-bottom: 7%;
+                  }
+              }
+              #creaciones{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                justify-content: space-between;
+                margin: 1%;
+                /*ESTILO PARA LAS CARDS*/
+                .card_project {
+                    width: 25%;
+                    border: 6px solid gray;
+                    background: #f8f9fa;
+                    position: relative;
+                    box-shadow: 15px 15px 50px #adb5bd75;
+                    text-align: center;
+                    transition: all 0.3s ease-in;
+                    img{
+                        width: 50%;
+                    }
+                  }
+
+                  .card_project h1 {
+                    margin: 5%;
+                    text-decoration: underline;
+                    text-decoration-color: #49c5b6;
+                  }
+
+                  .card_project p {
+                    transition: all 0.3s ease-in;
+                    color: white;
+                    margin: 6%;
+                    font-size: 15px;
+                  }
+
+                  .card_project:hover {
+                    cursor: pointer;
+                    box-shadow: none;
+                  }
+
+                  .card_project:hover p {
+                    transform: scale(1);
+                    color: #f8f9fa;
+                  }
+
+                  .card_project::before {
+                    content: '';
+                    width: 100%;
+                    height: 0;
+                    background: #49c5b6;
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                        /* Or Top */
+                    transition: 0.3s ease-in-out;
+                    z-index: 0;
+                  }
+
+                  .card_project:hover::before {
+                    height: 100%;
+                  }
+
+                  /*ESTILOS PARA LOS BOTONES*/
+                  .btn41-43 {
+                    padding: 10px 25px;
+                    font-family: "Roboto", sans-serif;
+                    font-weight: 500;
+                    background: transparent;
+                    outline: none !important;
+                    cursor: pointer;
+                    transition: all 0.3s ease;
+                    position: relative;
+                    display: inline-block;
+                    margin-bottom: 5%;
+                  }
+
+                  .btn-41 {
+                    border: 2px solid rgb(255, 255, 255);
+                    z-index: 1;
+                    color: white;
+                  }
+
+                  .btn-41:after {
+                    position: absolute;
+                    content: "";
+                    width: 0;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    direction: rtl;
+                    z-index: -1;
+                    background: rgb(255, 255, 255);
+                    transition: all 0.3s ease;
+                  }
+
+                  .btn-41:hover {
+                    color: rgb(0, 0, 0);
+                  }
+
+                  .btn-41:hover:after {
+                    left: auto;
+                    right: 0;
+                    width: 100%;
+                  }
+
+                  .btn-41:active {
+                    top: 2px;
+                  }
+            }
+          }
         }
 
     }
@@ -1214,7 +1507,7 @@
 
 
 /*PANTALLAS TELFONOS GENERAL*/
-@media screen and (max-width: 790px) {
+@media screen and (max-width: 1000px) {
     body{
         background-color: blue;
         #mainBar{
